<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.eriksson.assignment2b.AddContact">

    <ImageView
        android:id="@+id/addImgView"
        android:layout_width="fill_parent"
        android:layout_height="200dp" />

    <EditText
        android:layout_below="@+id/addImgView"
        android:hint="@string/img_url"
        android:id="@+id/editImg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
    <EditText
        android:hint="@string/detail_name"
        android:layout_below="@+id/editImg"
        android:id="@+id/editName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
    <EditText
        android:hint="@string/detail_age"
        android:id="@+id/editAge"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editName"/>
    <EditText
        android:hint="@string/detail_description"
        android:layout_below="@+id/editAge"
        android:id="@+id/editDescription"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/addContactBtn"
        android:layout_below="@+id/editDescription"
        android:text="@string/action_add_contact"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    <Button
        android:layout_below="@+id/addContactBtn"
        android:text="@string/update_img"
        android:id="@+id/updateImageBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
</RelativeLayout>
