<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.eriksson.assignment2b.ContactDetails">

    <ImageView
        android:id="@+id/editImg"
        android:layout_width="fill_parent"
        android:layout_height="200dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_name"
        android:id="@+id/textName"
        android:layout_alignBottom="@+id/editName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/editName"
        android:gravity="center_vertical" />
    <EditText
        android:hint="@string/detail_name"
        android:id="@+id/editName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/textView3"
        android:layout_below="@+id/editImg"
        android:layout_toRightOf="@+id/textView3"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <EditText
        android:hint="@string/detail_age"
        android:id="@+id/editAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editName"
        android:layout_alignRight="@+id/editName"
        android:layout_alignEnd="@+id/editName"
        android:layout_alignLeft="@+id/editName"
        android:layout_alignStart="@+id/editName" />
    <EditText
        android:hint="Description"
        android:id="@+id/editDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editAge"
        android:layout_alignRight="@+id/editAge"
        android:layout_alignEnd="@+id/editAge"
        android:layout_toRightOf="@+id/textView2"
        android:layout_toEndOf="@+id/textView2" />
    <EditText
        android:id="@+id/editUrl"
        android:hint="@string/img_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editDescription"
        android:layout_alignRight="@+id/editDescription"
        android:layout_alignEnd="@+id/editDescription"
        android:layout_alignLeft="@+id/editDescription"
        android:layout_alignStart="@+id/editDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_age"
        android:id="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center_vertical"
        android:layout_alignTop="@+id/editAge"
        android:layout_above="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_des"
        android:id="@+id/textView2"
        android:layout_below="@+id/editAge"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/editDescription"
        android:layout_toLeftOf="@+id/editAge"
        android:layout_toStartOf="@+id/editAge"
        android:gravity="center_vertical" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/detail_url"
        android:id="@+id/textView3"
        android:layout_alignTop="@+id/editUrl"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center_vertical"
        android:layout_alignBottom="@+id/editUrl" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_btn"
        android:id="@+id/updateBtn"
        android:layout_below="@+id/editUrl"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp" />

</RelativeLayout>
